Use dynamic PORT from environment

--- a/DocuLearn/src/main/resources/application.properties
+++ b/DocuLearn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 server.servlet.context-path=/doculearn
-
+server.port=${PORT:8080}
 # link url public:
 # https://b176d196c144.ngrok-free.app/doculearn/
 
